--- a/src/styles.css
+++ b/src/styles.css
@@ -85,32 +85,16 @@ html {
   transition: all .2s
 }
 
-.item-container input {
-  font-size: 1.8rem;
-  background-color: transparent;
-  border: none;
-}
-
-.item-container input:focus{
-  border: none;
-}
-
-.strike-out {
-  text-decoration: line-through 1.75px solid #1DA1F2;
-}
-ul {
-  list-style-type: none;
-  padding-top: 1.5rem;
-}
-
 .item-container{
   margin-bottom: 1.25rem;
-  box-shadow: 0px 30px 40px rgba(0,0,0,.1);
   background-color: transparent;
-  border-bottom: 1px solid rgb(116, 115, 115);
+  border-bottom: 1px solid transparent;
+  border-image: linear-gradient(to right,rgba(255, 255, 255, 0.1),rgb(29, 161, 242), rgba(255, 255, 255, 0.1));
+  border-image-slice: 20;
   list-style-type: none;
   display: flex;
   justify-content: space-between;
+  padding: 1rem;
 }
 
 .item-checkbox {
@@ -122,6 +106,32 @@ ul {
 .item-container input {
   cursor: pointer;
 }
+
+.item-container input {
+  font-size: 1.8rem;
+  background-color: transparent;
+  border: none;
+}
+
+.item-container input:focus{
+  border: none;
+}
+
+
+.completed-todo {
+  text-decoration: line-through 1.75px #1DA1F2;
+  background-color: lightslategray;
+  border-radius: 5px;
+  position: relative;
+  opacity: 0.7;
+}
+
+
+ul {
+  list-style-type: none;
+  padding-top: 1.5rem;
+}
+
 
 svg {
   padding: 0 1rem 0 1rem;
@@ -144,6 +154,8 @@ svg:hover {
   flex-direction: row;
   justify-content: center;
 }
+
+
 
 /* For Trash Icon Hover Effect */
 
