--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,9 @@
   box-sizing: inherit;
   
 }
+
 body{
   overflow-x: hidden;
-  /* background-image: url(../src/img/pexels-lukas-1419923.jpg);
-  background-size:cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; */
 }
 
 html {
@@ -20,7 +17,7 @@ html {
 /*//////////////// Sytling for Light or Dark ///////////////////*/
 
 #light{
-  height: 100rem;
+  min-height: 100vh;
   width: 100vw;
   background: rgb(211,230,246);
   background: radial-gradient(circle, rgba(211,230,246,0.9948354341736695) 34%, rgba(210,210,222,1) 100%);
@@ -28,7 +25,7 @@ html {
 }
 
 #dark{
-  height: 100rem;
+  min-height: 100vh;
   width: 100vw;
   background: rgb(11,31,56);
   background: radial-gradient(circle, rgba(11,31,56,1) 1%, rgba(9,11,40,1) 100%);
